@@ -4,6 +4,7 @@ to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
 http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.13.4
+  Bugfix: Files without extension get backed up to name..bak (#2627752)
   Translation updates:
   - Greek (#2615285)
 
